Intro to pytorch
Forward pass introduction.

--- a/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,17 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "# First, import PyTorch\n",
-    "import torch"
+    "import torch\n",
+    "import helper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,16 +106,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x18790895810>"
+       "<torch._C.Generator at 0x25c4af55b50>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features tensor :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1468,  0.7861,  0.9468, -1.1143,  1.6908]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weights tensor :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.8948, -0.3556,  1.2324,  0.1382, -1.6822]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "biases tensor :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.3177]])"
+      ]
+     },
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,10 +177,16 @@
     "\n",
     "# Features are 5 random normal variables\n",
     "features = torch.randn((1, 5))\n",
+    "helper.print_statement('features tensor :')\n",
+    "features\n",
     "# True weights for our data, random normal variables again\n",
     "weights = torch.randn_like(features)\n",
+    "helper.print_statement('weights tensor :')\n",
+    "weights\n",
     "# and a true bias term\n",
-    "bias = torch.randn((1, 1))"
+    "bias = torch.randn((1, 1))\n",
+    "helper.print_statement('biases tensor :')\n",
+    "bias"
    ]
   },
   {
@@ -149,11 +207,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hidden1 linear model :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.9796]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bias :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.3177]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hidden layer input :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.6619]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using the weights and bias tensors"
+    "## Calculate the output of this network using the weights and bias tensors\n",
+    "hidden1_linear_model = torch.mm(features, weights.reshape(5, 1))\n",
+    "helper.print_statement('hidden1 linear model :')\n",
+    "hidden1_linear_model\n",
+    "\n",
+    "helper.print_statement('bias :')\n",
+    "bias\n",
+    "\n",
+    "hidden_in_input = torch.add(hidden1_linear_model, bias)\n",
+    "helper.print_statement('Hidden layer input :')\n",
+    "hidden_in_input"
    ]
   },
   {
@@ -192,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,16 +354,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x18790895810>"
+       "<torch._C.Generator at 0x25c4af55b50>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1468,  0.7861,  0.9468]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.1143,  1.6908],\n",
+       "        [-0.8948, -0.3556],\n",
+       "        [ 1.2324,  0.1382]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.6822],\n",
+       "        [ 0.3177]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1328, 0.1373]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2405]])"
+      ]
+     },
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,20 +437,26 @@
     "\n",
     "# Features are 3 random normal variables\n",
     "features = torch.randn((1, 3))\n",
-    "\n",
+    "features.shape[1]\n",
+    "# feature output\n",
+    "features\n",
     "# Define the size of each layer in our network\n",
-    "n_input = features.shape[1]     # Number of input units, must match number of input features\n",
+    "n_input = features.shape[1]      # Number of input units, must match number of input features\n",
     "n_hidden = 2                    # Number of hidden units \n",
     "n_output = 1                    # Number of output units\n",
     "\n",
     "# Weights for inputs to hidden layer\n",
     "W1 = torch.randn(n_input, n_hidden)\n",
+    "W1\n",
     "# Weights for hidden layer to output layer\n",
     "W2 = torch.randn(n_hidden, n_output)\n",
+    "W2\n",
     "\n",
     "# and bias terms for hidden and output layers\n",
-    "B1 = torch.randn((1, n_hidden))\n",
-    "B2 = torch.randn((1, n_output))"
+    "B1 = torch.randn(1, n_hidden)\n",
+    "B1\n",
+    "B2 = torch.randn(1, n_output)\n",
+    "B2"
    ]
   },
   {
@@ -279,11 +468,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hidden layer (1) linear transform step i output : \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.6270, -0.3969]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hidden layer (1) linear transform step ii output : \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.7598, -0.2596]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hidden layer (1) output : \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.6813, 0.4355]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Your solution here"
+    "# Performing forward pass for hidden layer 1\n",
+    "hidden1_lt_a_i = torch.matmul(features, W1)\n",
+    "helper.print_statement('Hidden layer (1) linear transform step i output : ')\n",
+    "hidden1_lt_a_i\n",
+    "\n",
+    "hidden1_lt_a_ii = torch.add(hidden1_lt_a_i, B1)\n",
+    "helper.print_statement('Hidden layer (1) linear transform step ii output : ')\n",
+    "hidden1_lt_a_ii\n",
+    "\n",
+    "hidden1_out = activation(hidden1_lt_a_ii)\n",
+    "helper.print_statement('Hidden layer (1) output : ')\n",
+    "hidden1_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hidden layer (2) linear transform step i output : \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.0078]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hidden layer (2) linear transform step ii output : \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.7672]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Performing forward pass for hidden layer 2\n",
+    "hidden2_lt_i = torch.matmul(hidden1_out, W2)\n",
+    "helper.print_statement('Hidden layer (2) linear transform step i output : ')\n",
+    "hidden2_lt_i\n",
+    "hidden2_lt_ii = torch.add(hidden2_lt_i, B2)\n",
+    "helper.print_statement('Hidden layer (2) linear transform step ii output : ')\n",
+    "hidden2_lt_ii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hidden layer (2) output : \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.3171]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hidden2_out = activation(hidden2_lt_ii)\n",
+    "helper.print_statement('Hidden layer (2) output : ')\n",
+    "hidden2_out"
    ]
   },
   {
@@ -306,19 +637,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.29192896, 0.86105602, 0.96853562],\n",
-       "       [0.52374592, 0.02191717, 0.24945155],\n",
-       "       [0.18247061, 0.15696938, 0.23516812],\n",
-       "       [0.1932991 , 0.21493724, 0.25990524]])"
+       "array([[0.75310455, 0.42851304, 0.85142768],\n",
+       "       [0.22999305, 0.91750795, 0.34945333],\n",
+       "       [0.64253766, 0.09762575, 0.73036191],\n",
+       "       [0.58906994, 0.86426864, 0.2178533 ]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,19 +662,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.2919, 0.8611, 0.9685],\n",
-       "        [0.5237, 0.0219, 0.2495],\n",
-       "        [0.1825, 0.1570, 0.2352],\n",
-       "        [0.1933, 0.2149, 0.2599]], dtype=torch.float64)"
+       "tensor([[0.7531, 0.4285, 0.8514],\n",
+       "        [0.2300, 0.9175, 0.3495],\n",
+       "        [0.6425, 0.0976, 0.7304],\n",
+       "        [0.5891, 0.8643, 0.2179]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,19 +686,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.29192896, 0.86105602, 0.96853562],\n",
-       "       [0.52374592, 0.02191717, 0.24945155],\n",
-       "       [0.18247061, 0.15696938, 0.23516812],\n",
-       "       [0.1932991 , 0.21493724, 0.25990524]])"
+       "array([[0.75310455, 0.42851304, 0.85142768],\n",
+       "       [0.22999305, 0.91750795, 0.34945333],\n",
+       "       [0.64253766, 0.09762575, 0.73036191],\n",
+       "       [0.58906994, 0.86426864, 0.2178533 ]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,19 +716,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.5839, 1.7221, 1.9371],\n",
-       "        [1.0475, 0.0438, 0.4989],\n",
-       "        [0.3649, 0.3139, 0.4703],\n",
-       "        [0.3866, 0.4299, 0.5198]], dtype=torch.float64)"
+       "tensor([[1.5062, 0.8570, 1.7029],\n",
+       "        [0.4600, 1.8350, 0.6989],\n",
+       "        [1.2851, 0.1953, 1.4607],\n",
+       "        [1.1781, 1.7285, 0.4357]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,19 +740,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.58385792, 1.72211204, 1.93707124],\n",
-       "       [1.04749185, 0.04383434, 0.49890311],\n",
-       "       [0.36494121, 0.31393875, 0.47033624],\n",
-       "       [0.3865982 , 0.42987448, 0.51981047]])"
+       "array([[1.50620911, 0.85702608, 1.70285535],\n",
+       "       [0.4599861 , 1.83501591, 0.69890667],\n",
+       "       [1.28507532, 0.19525151, 1.46072381],\n",
+       "       [1.17813988, 1.72853728, 0.43570659]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
