--- a/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -1,25 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = 'all'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%config IPCompleter.greedy = True"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,18 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# First, import PyTorch\n",
-    "import torch\n",
-    "import helper"
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = 'all'\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,25 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x25c4af55b50>"
+       "<torch._C.Generator at 0x7fe69c0ffdf0>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "features tensor :\n"
-     ]
     },
     {
      "data": {
@@ -132,16 +107,9 @@
        "tensor([[-0.1468,  0.7861,  0.9468, -1.1143,  1.6908]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "weights tensor :\n"
-     ]
     },
     {
      "data": {
@@ -149,24 +117,17 @@
        "tensor([[-0.8948, -0.3556,  1.2324,  0.1382, -1.6822]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "biases tensor :\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor([[0.3177]])"
+       "tensor([[ 0.3177]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,17 +136,14 @@
     "### Generate some data\n",
     "torch.manual_seed(7) # Set the random seed so things are predictable\n",
     "\n",
-    "# Features are 5 random normal variables\n",
+    "# Features are 3 random normal variables\n",
     "features = torch.randn((1, 5))\n",
-    "helper.print_statement('features tensor :')\n",
     "features\n",
     "# True weights for our data, random normal variables again\n",
     "weights = torch.randn_like(features)\n",
-    "helper.print_statement('weights tensor :')\n",
     "weights\n",
     "# and a true bias term\n",
     "bias = torch.randn((1, 1))\n",
-    "helper.print_statement('biases tensor :')\n",
     "bias"
    ]
   },
@@ -207,73 +165,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hidden1 linear model :\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-1.9796]])"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bias :\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.3177]])"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hidden layer input :\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "tensor([[-1.6619]])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Calculate the output of this network using the weights and bias tensors\n",
-    "hidden1_linear_model = torch.mm(features, weights.reshape(5, 1))\n",
-    "helper.print_statement('hidden1 linear model :')\n",
-    "hidden1_linear_model\n",
-    "\n",
-    "helper.print_statement('bias :')\n",
-    "bias\n",
-    "\n",
-    "hidden_in_input = torch.add(hidden1_linear_model, bias)\n",
-    "helper.print_statement('Hidden layer input :')\n",
-    "hidden_in_input"
+    "##TODO Calculate the output of this network using the weights and bias tensors\n",
+    "unit_output = torch.add(torch.mm(features, weights.view(features.shape[1], -1)), bias)\n",
+    "unit_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1595]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neural_network_output = activation(unit_output)\n",
+    "neural_network_output"
    ]
   },
   {
@@ -312,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,79 +284,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x25c4af55b50>"
+       "<torch._C.Generator at 0x7fe69c0ffdf0>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "3"
+       "torch.Size([1, 3])"
       ]
      },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-0.1468,  0.7861,  0.9468]])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-1.1143,  1.6908],\n",
-       "        [-0.8948, -0.3556],\n",
-       "        [ 1.2324,  0.1382]])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-1.6822],\n",
-       "        [ 0.3177]])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.1328, 0.1373]])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.2405]])"
-      ]
-     },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,26 +314,106 @@
     "\n",
     "# Features are 3 random normal variables\n",
     "features = torch.randn((1, 3))\n",
-    "features.shape[1]\n",
-    "# feature output\n",
-    "features\n",
+    "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define the size of each layer in our network\n",
-    "n_input = features.shape[1]      # Number of input units, must match number of input features\n",
+    "n_input = features.shape[1]     # Number of input units, must match number of input features\n",
     "n_hidden = 2                    # Number of hidden units \n",
-    "n_output = 1                    # Number of output units\n",
-    "\n",
+    "n_output = 1                   # Number of output units"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 2])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Weights for inputs to hidden layer\n",
-    "W1 = torch.randn(n_input, n_hidden)\n",
-    "W1\n",
+    "W1 = torch.randn((n_input, n_hidden))\n",
+    "W1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 1])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Weights for hidden layer to output layer\n",
-    "W2 = torch.randn(n_hidden, n_output)\n",
-    "W2\n",
-    "\n",
+    "W2 = torch.randn((n_hidden, n_output))\n",
+    "W2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# and bias terms for hidden and output layers\n",
-    "B1 = torch.randn(1, n_hidden)\n",
-    "B1\n",
-    "B2 = torch.randn(1, n_output)\n",
-    "B2"
+    "B1 = torch.randn((1, n_hidden))\n",
+    "B1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 1])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B2 = torch.randn((1, n_output))\n",
+    "B2.shape"
    ]
   },
   {
@@ -468,153 +425,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hidden layer (1) linear transform step i output : \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.6270, -0.3969]])"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hidden layer (1) linear transform step ii output : \n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "tensor([[ 0.7598, -0.2596]])"
       ]
      },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hidden layer (1) output : \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.6813, 0.4355]])"
-      ]
-     },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Performing forward pass for hidden layer 1\n",
-    "hidden1_lt_a_i = torch.matmul(features, W1)\n",
-    "helper.print_statement('Hidden layer (1) linear transform step i output : ')\n",
-    "hidden1_lt_a_i\n",
-    "\n",
-    "hidden1_lt_a_ii = torch.add(hidden1_lt_a_i, B1)\n",
-    "helper.print_statement('Hidden layer (1) linear transform step ii output : ')\n",
-    "hidden1_lt_a_ii\n",
-    "\n",
-    "hidden1_out = activation(hidden1_lt_a_ii)\n",
-    "helper.print_statement('Hidden layer (1) output : ')\n",
-    "hidden1_out"
+    "##TODO Your solution here\n",
+    "input_layer_linear_combination = torch.add(torch.mm(features, W1), B1)\n",
+    "input_layer_linear_combination"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hidden layer (2) linear transform step i output : \n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor([[-1.0078]])"
+       "tensor([[ 0.6813,  0.4355]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hidden layer (2) linear transform step ii output : \n"
-     ]
-    },
+    }
+   ],
+   "source": [
+    "h1_input = activation(input_layer_linear_combination)\n",
+    "h1_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
        "tensor([[-0.7672]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Performing forward pass for hidden layer 2\n",
-    "hidden2_lt_i = torch.matmul(hidden1_out, W2)\n",
-    "helper.print_statement('Hidden layer (2) linear transform step i output : ')\n",
-    "hidden2_lt_i\n",
-    "hidden2_lt_ii = torch.add(hidden2_lt_i, B2)\n",
-    "helper.print_statement('Hidden layer (2) linear transform step ii output : ')\n",
-    "hidden2_lt_ii"
+    "h1_layer_linear_combination = torch.add(torch.mm(h1_input, W2), B2)\n",
+    "h1_layer_linear_combination"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hidden layer (2) output : \n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor([[0.3171]])"
+       "tensor([[ 0.3171]])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hidden2_out = activation(hidden2_lt_ii)\n",
-    "helper.print_statement('Hidden layer (2) output : ')\n",
-    "hidden2_out"
+    "output_layer_input = activation(h1_layer_linear_combination)\n",
+    "output_layer_input"
    ]
   },
   {
@@ -637,19 +528,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.75310455, 0.42851304, 0.85142768],\n",
-       "       [0.22999305, 0.91750795, 0.34945333],\n",
-       "       [0.64253766, 0.09762575, 0.73036191],\n",
-       "       [0.58906994, 0.86426864, 0.2178533 ]])"
+       "array([[ 0.74727655,  0.46551543,  0.73365157],\n",
+       "       [ 0.03114405,  0.00170791,  0.14758507],\n",
+       "       [ 0.70804086,  0.97710876,  0.93425081],\n",
+       "       [ 0.57081201,  0.01218181,  0.23963355]])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,19 +553,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.7531, 0.4285, 0.8514],\n",
-       "        [0.2300, 0.9175, 0.3495],\n",
-       "        [0.6425, 0.0976, 0.7304],\n",
-       "        [0.5891, 0.8643, 0.2179]], dtype=torch.float64)"
+       "tensor([[ 0.7473,  0.4655,  0.7337],\n",
+       "        [ 0.0311,  0.0017,  0.1476],\n",
+       "        [ 0.7080,  0.9771,  0.9343],\n",
+       "        [ 0.5708,  0.0122,  0.2396]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,19 +577,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.75310455, 0.42851304, 0.85142768],\n",
-       "       [0.22999305, 0.91750795, 0.34945333],\n",
-       "       [0.64253766, 0.09762575, 0.73036191],\n",
-       "       [0.58906994, 0.86426864, 0.2178533 ]])"
+       "array([[ 0.74727655,  0.46551543,  0.73365157],\n",
+       "       [ 0.03114405,  0.00170791,  0.14758507],\n",
+       "       [ 0.70804086,  0.97710876,  0.93425081],\n",
+       "       [ 0.57081201,  0.01218181,  0.23963355]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,19 +607,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1.5062, 0.8570, 1.7029],\n",
-       "        [0.4600, 1.8350, 0.6989],\n",
-       "        [1.2851, 0.1953, 1.4607],\n",
-       "        [1.1781, 1.7285, 0.4357]], dtype=torch.float64)"
+       "tensor([[ 1.4946,  0.9310,  1.4673],\n",
+       "        [ 0.0623,  0.0034,  0.2952],\n",
+       "        [ 1.4161,  1.9542,  1.8685],\n",
+       "        [ 1.1416,  0.0244,  0.4793]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,19 +631,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.50620911, 0.85702608, 1.70285535],\n",
-       "       [0.4599861 , 1.83501591, 0.69890667],\n",
-       "       [1.28507532, 0.19525151, 1.46072381],\n",
-       "       [1.17813988, 1.72853728, 0.43570659]])"
+       "array([[ 1.4945531 ,  0.93103086,  1.46730314],\n",
+       "       [ 0.06228809,  0.00341583,  0.29517013],\n",
+       "       [ 1.41608173,  1.95421752,  1.86850162],\n",
+       "       [ 1.14162401,  0.02436362,  0.47926711]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
