feat: Perform Validation against trained model
Develop validation code to find out accuracy on validation set against
trained model on training set.

--- a/intro-to-pytorch/Part 4 - Fashion-MNIST (Exercises).ipynb
+++ b/intro-to-pytorch/Part 4 - Fashion-MNIST (Exercises).ipynb
@@ -206,8 +206,8 @@
     "        optimizer.step()\n",
     "        \n",
     "        running_loss += loss.item()\n",
-    "        \n",
-    "    print('Average running loss : ', running_loss/len(trainloader))"
+    "    else:\n",
+    "        print('Average running loss : ', running_loss/len(trainloader))"
    ]
   },
   {
