feat: Develop training part for Dog vs Cat classifier

--- a/intro-to-pytorch/Part 8 - Transfer Learning (Exercises).ipynb
+++ b/intro-to-pytorch/Part 8 - Transfer Learning (Exercises).ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,18 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dir = 'Cat_Dog_data'\n",
-    "\n",
+    "batch_size = 64\n",
     "# Pass transforms in here, then run the next cell to see how the transforms look\n",
     "train_data = datasets.ImageFolder(data_dir + '/train', transform = train_transforms)\n",
     "test_data = datasets.ImageFolder(data_dir + '/test', transform = test_transforms)\n",
     "\n",
-    "trainloader = torch.utils.data.DataLoader(train_data, shuffle = True, batch_size = 64)\n",
-    "testloader = torch.utils.data.DataLoader(test_data, batch_size = 64)"
+    "trainloader = torch.utils.data.DataLoader(train_data, shuffle = True, batch_size = batch_size)\n",
+    "testloader = torch.utils.data.DataLoader(test_data, batch_size = batch_size)"
    ]
   },
   {
@@ -134,17 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mistertandon\\Anaconda3\\envs\\ud-deep-env\\lib\\site-packages\\torchvision\\models\\densenet.py:212: UserWarning: nn.init.kaiming_normal is now deprecated in favor of nn.init.kaiming_normal_.\n",
-      "  nn.init.kaiming_normal(m.weight.data)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -650,7 +642,7 @@
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,14 +709,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device = cuda; Time per batch: 0.035 seconds\n"
+      "Device = cuda; Time per batch: 0.036 seconds\n"
      ]
     }
    ],
@@ -759,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1281,7 @@
        ")"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1820,7 @@
        ")"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,14 +1831,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3963869512081146\n"
+      "training loss 13593.516070127487\n",
+      "training loss 13615.38275027275\n"
      ]
     }
    ],
@@ -1854,21 +1847,21 @@
     "criterion_resenet152 = nn.NLLLoss()\n",
     "optimizer_resnet152 = optim.Adagrad(model_resnet152.fc.parameters(), lr = 0.001)\n",
     "\n",
-    "for images, labels in trainloader:\n",
-    "    \n",
-    "    images, labels = images.to(device), labels.to(device)\n",
-    "    \n",
-    "    output = model.forward(images)\n",
-    "    \n",
-    "    loss = criterion_resenet152(output, labels)\n",
-    "    loss.backward()\n",
-    "    \n",
-    "    optimizer_resnet152.step()\n",
-    "    \n",
-    "    print(loss.item())\n",
-    "    \n",
-    "    break\n",
-    "    "
+    "epochs = 2\n",
+    "for epoch in range(epochs):\n",
+    "    training_loss = 0.0\n",
+    "    for images, labels in trainloader:\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
+    "\n",
+    "        optimizer_resnet152.zero_grad()\n",
+    "\n",
+    "        output = model.forward(images)\n",
+    "        loss = criterion_resenet152(output, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer_resnet152.step()\n",
+    "\n",
+    "        training_loss += loss.item() * labels.size(0)\n",
+    "    print(\"training loss\", training_loss)"
    ]
   }
  ],
