feat: Part iv : Implement CNN to classify CIFAR10 dataset images
Develop validation pass, required to evaluation trained images.

--- a/intro-to-pytorch/Part 5 - Inference and Validation (Exercises).ipynb
+++ b/intro-to-pytorch/Part 5 - Inference and Validation (Exercises).ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "from IPython.core.interactiveshell import InteractiveShell\n",
-    "#InteractiveShell.ast_node_interactivity = 'all'"
+    "InteractiveShell.ast_node_interactivity = 'all'"
    ]
   },
   {
@@ -368,10 +368,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dp = NetworkDropout()\n",
-    "\n",
+    "model_dp = NetworkDropout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "criterion_dp = nn.NLLLoss()\n",
     "optimizer_dp = optim.SGD(model_dp.parameters(), lr=0.002)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "InteractiveShell.ast_node_interactivity = 'none'"
    ]
   },
   {
