--- a/intro-to-pytorch/Part 8 - Transfer Learning (Exercises).ipynb
+++ b/intro-to-pytorch/Part 8 - Transfer Learning (Exercises).ipynb
@@ -1323,6 +1323,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "InteractiveShell.ast_node_interactivity = 'none'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [
