feat: Implement Simple Linear Autoancoder

--- a/autoencoder/convolutional-autoencoder/Convolutional_Autoencoder_Exercise.ipynb
+++ b/autoencoder/convolutional-autoencoder/Convolutional_Autoencoder_Exercise.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,8 @@
      "output_type": "stream",
      "text": [
       "Epoch: 1 \tTraining Loss: 1.451679\n",
-      "Epoch: 2 \tTraining Loss: 1.159824\n"
+      "Epoch: 2 \tTraining Loss: 1.159824\n",
+      "Epoch: 3 \tTraining Loss: 1.123492\n"
      ]
     }
    ],
