--- a/autoencoder/convolutional-autoencoder/Convolutional_Autoencoder_Exercise.ipynb
+++ b/autoencoder/convolutional-autoencoder/Convolutional_Autoencoder_Exercise.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -97,17 +97,17 @@
        "(28, 28)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x266a9ac19b0>"
+       "<matplotlib.image.AxesImage at 0x2668ab3db00>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "ConvAutoencoder(\n",
-       "  (conv_i): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1))\n",
+       "  (conv_i): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "  (conv_ii): Conv2d(16, 4, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
        "  (max_pool): MaxPool2d(kernel_size=5, stride=2, padding=2, dilation=1, ceil_mode=False)\n",
        "  (relu): ReLU()\n",
@@ -202,7 +202,7 @@
        ")"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
     "        super(ConvAutoencoder, self).__init__()\n",
     "        ## encoder layers ##\n",
     "\n",
-    "        self.conv_i = nn.Conv2d(in_channels = 1, out_channels = 16, kernel_size = 3, stride = 1, padding = 0)\n",
+    "        self.conv_i = nn.Conv2d(in_channels = 1, out_channels = 16, kernel_size = 3, stride = 1, padding = 1)\n",
     "\n",
     "        self.conv_ii = nn.Conv2d(in_channels = 16, out_channels = 4, kernel_size = 5, stride = 1, padding = 2)\n",
     "\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,30 +281,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mistertandon\\Anaconda3\\envs\\ud-deep-env\\lib\\site-packages\\torch\\nn\\functional.py:1332: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
-      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1 \tTraining Loss: 1.451679\n",
-      "Epoch: 2 \tTraining Loss: 1.159824\n",
-      "Epoch: 3 \tTraining Loss: 1.123492\n"
+      "Epoch: 1 \tTraining Loss: 1.041956\n",
+      "Epoch: 2 \tTraining Loss: 0.655768\n",
+      "Epoch: 3 \tTraining Loss: 0.538565\n",
+      "Epoch: 4 \tTraining Loss: 0.513147\n",
+      "Epoch: 5 \tTraining Loss: 0.500144\n"
      ]
     }
    ],
    "source": [
     "# number of epochs to train the model\n",
-    "n_epochs = 3\n",
+    "n_epochs = 5\n",
     "\n",
     "for epoch in range(1, n_epochs+1):\n",
     "    # monitor training loss\n",
@@ -350,17 +344,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't convert CUDA tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-d7845dec6c00>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mview\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m28\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m28\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;31m# use detach when it's an output that requires_grad\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;31m# plot the first ten input images and then reconstructed images\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can't convert CUDA tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first."
+     ]
+    }
+   ],
    "source": [
     "# obtain one batch of test images\n",
     "dataiter = iter(test_loader)\n",
     "images, labels = dataiter.next()\n",
+    "images = images.to(gpu_device)\n",
     "\n",
     "# get sample outputs\n",
     "output = model(images)\n",
     "# prep images for display\n",
+    "\n",
+    "images = images.to(cpu_device)\n",
     "images = images.numpy()\n",
     "\n",
     "# output is resized into a batch of iages\n",
